# api-ribetec-printer

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  start_docker_compose.sh
app/: config.py  main.py
app/models/: __init__.py  label.py
app/routers/: __init__.py  print.py
app/services/: __init__.py  ip_service.py  printer.py  zpl_generator.py
