[project]
name = "api-ribetec-printer"
version = "0.1.0"
description = "API para imprimir etiquetas en impresora térmica Ribetec RT-420ME"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "psycopg[binary]>=3.1.0",
]
